@@ -1,3 +1,7 @@
+2014-12-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* new-features.xml (ov-new1.7.34): Add latest changes.
+
 2014-11-28  Yaakov Selkowitz  <yselkowi@redhat.com>
 
 	* Makefile.in (XSLTPROC): Remove.
